# KASA5

./: README.md  pyproject.toml
config/: middlewares.py  settings.py
rooms/: queries.py  schema.py  types.py
rooms/migrations/: 0003_alter_room_options.py
users/: mutations.py  queries.py  schema.py  types.py
users/migrations/: 0002_alter_user_avatar_alter_user_first_name.py
