[tool.poetry]
name = "airbnb-api"
version = "0.1.0"
description = ""
authors = ["wottan32 <mariotorreslagos@gmail.com>"]
readme = "README.md"
packages = [{include = "airbnb_api"}]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^9.3.0"
django = "^4.1.4"
django-seed = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
